--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "mobx": "^4.3.0",
     "mobx-react": "^5.1.2",
     "react": "^16.4.0",
